fix: Update package.json for Render deployment and add render.yaml configuration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,47 +3,31 @@ NODE_ENV=development
 PORT=8080
 API_PREFIX=/api
 
-# Database Configuration (PostgreSQL)
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_DB=filmila
-POSTGRES_USER=your_username
-POSTGRES_PASSWORD=your_password
+# Database Configuration
+DATABASE_URL=postgres://username:password@localhost:5432/filmila
+DATABASE_SSL=false
 
 # JWT Configuration
-JWT_SECRET=your_jwt_secret
-JWT_EXPIRATION=24h
+JWT_SECRET=your_jwt_secret_key
+JWT_EXPIRY=24h
+
+# Email Configuration
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=your_smtp_username
+SMTP_PASS=your_smtp_password
+EMAIL_FROM=noreply@filmila.com
 
 # AWS Configuration
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=your_access_key
-AWS_SECRET_ACCESS_KEY=your_secret_key
-AWS_S3_BUCKET=filmila-videos
-AWS_CLOUDFRONT_DOMAIN=your_cloudfront_domain
+AWS_ACCESS_KEY_ID=your_aws_access_key
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+AWS_REGION=your_aws_region
+S3_BUCKET=your_s3_bucket
 
 # Stripe Configuration
 STRIPE_SECRET_KEY=your_stripe_secret_key
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
 
-# Email Configuration
-SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_USER=your_smtp_user
-SMTP_PASSWORD=your_smtp_password
-EMAIL_FROM=noreply@filmila.com
-
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
-
-# Video Processing
-MAX_VIDEO_SIZE=5242880000 # 5GB
-ALLOWED_VIDEO_FORMATS=mp4,mov,avi,webm
-VIDEO_PROCESSING_TIMEOUT=3600000 # 1 hour
-
-# Cache Configuration
-CACHE_TTL=3600 # 1 hour
-CACHE_CHECK_PERIOD=600 # 10 minutes
-
-# Monitoring
-SENTRY_DSN=your_sentry_dsn
