--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon src/index.js",
     "test": "jest",
     "lint": "eslint src/",
-    "migrate": "node src/db/migrate.js"
+    "migrate": "node src/db/migrate.js",
+    "build": "npm install"
   },
   "dependencies": {
     "aws-sdk": "^2.1450.0",
@@ -16,11 +17,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.9.0",
+    "express-rate-limit": "^6.11.2",
+    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
-    "pg": "^8.11.3",
+    "nodemailer": "^6.10.0",
+    "pg": "^8.14.0",
+    "pg-pool": "^3.8.0",
     "stripe": "^13.3.0",
     "winston": "^3.10.0"
   },
@@ -29,5 +33,8 @@
     "jest": "^29.6.4",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
