--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^6.10.0",
     "pg": "^8.14.0",
     "pg-pool": "^3.8.0",
