--- a/render.yaml
+++ b/render.yaml
@@ -12,9 +12,7 @@ services:
       - key: PORT
         value: 8080
       - key: DATABASE_URL
-        fromDatabase:
-          name: filmila-db
-          property: connectionString
+        value: postgresql://filmila_db_user:0KPw6xRyDXmM0nG7Zy90R7T7hOm8dxbh@dpg-cv91v09c1ekc73e2v57g-a.singapore-postgres.render.com/filmila_db
       - key: DATABASE_SSL
         value: true
       - key: JWT_SECRET
@@ -52,9 +50,3 @@ services:
       - type: rewrite
         source: /*
         destination: /index.html
-
-databases:
-  - name: filmila-db
-    databaseName: filmila
-    user: filmila_admin
-    plan: free
