--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,7 @@ services:
   - type: web
     name: filmila-api
     env: node
-    rootDir: backend
-    buildCommand: npm install
+    buildCommand: npm install && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
