--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
   - type: web
     name: filmila-api
     env: node
-    buildCommand: npm install && npm run build
-    startCommand: npm start
+    buildCommand: npm ci && npm run build
+    startCommand: NODE_ENV=production npm start
     envVars:
       - key: NODE_ENV
         value: production
@@ -38,7 +38,7 @@ services:
     name: filmila-web
     env: static
     rootDir: frontend
-    buildCommand: npm install && npm run build
+    buildCommand: npm ci && npm run build
     staticPublishPath: build
     envVars:
       - key: REACT_APP_API_URL
