--- a/package.json
+++ b/package.json
@@ -2,12 +2,7 @@
   "name": "filmila",
   "version": "1.0.0",
   "description": "Filmila platform",
-  "scripts": {
-    "start": "cd backend && node src/app.js",
-    "build": "cd backend && npm ci",
-    "postbuild": "cd backend && node src/db/migrate.js",
-    "install": "cd backend && npm ci"
-  },
+  "private": true,
   "engines": {
     "node": ">=16.0.0"
   }
