--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
   - type: web
     name: filmila-api
     env: node
-    buildCommand: npm ci && npm run build
-    startCommand: NODE_ENV=production npm start
+    buildCommand: cd backend && npm ci && npm run migrate
+    startCommand: cd backend && node src/app.js
     envVars:
       - key: NODE_ENV
         value: production
