--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,10 @@ services:
     name: filmila-api
     env: node
     rootDir: backend
-    buildCommand: npm ci && npm run migrate
-    startCommand: node src/app.js
+    buildCommand: |
+      npm ci --production=false
+      npm run migrate
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
@@ -39,7 +41,9 @@ services:
     name: filmila-web
     env: static
     rootDir: frontend
-    buildCommand: npm ci && npm run build
+    buildCommand: |
+      npm ci --production=false
+      npm run build
     staticPublishPath: build
     envVars:
       - key: REACT_APP_API_URL
