--- a/render.yaml
+++ b/render.yaml
@@ -4,24 +4,9 @@ services:
     name: filmila-api
     env: node
     branch: clean-deploy
-    buildCommand: |
-      echo "Current directory: $(pwd)"
-      echo "Directory contents:"
-      ls -la
-      echo "Checking for backend directory..."
-      if [ ! -d "backend" ]; then
-        echo "Creating backend symlink..."
-        ln -s . backend
-      fi
-      cd backend || exit 1
-      echo "Installing dependencies..."
-      npm ci --production=false
-      echo "Running migrations..."
-      npm run migrate
-    startCommand: |
-      echo "Starting backend service..."
-      cd backend || exit 1
-      NODE_ENV=production npm start
+    rootDirectory: backend
+    buildCommand: npm ci --production=false && npm run migrate
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
