--- a/package.json
+++ b/package.json
@@ -4,6 +4,23 @@
   "description": "Filmila platform",
   "private": true,
   "engines": {
-    "node": ">=16.0.0"
+    "node": "16.x"
+  },
+  "workspaces": [
+    "frontend",
+    "backend"
+  ],
+  "scripts": {
+    "start": "cd backend && npm start",
+    "build": "npm run build:frontend && npm run build:backend",
+    "build:frontend": "cd frontend && npm ci --legacy-peer-deps && CI=false DISABLE_ESLINT_PLUGIN=true npm run build",
+    "build:backend": "cd backend && npm ci --legacy-peer-deps && npm run build && npm run migrate",
+    "dev": "concurrently \"cd frontend && npm start\" \"cd backend && npm run dev\"",
+    "test": "npm run test:frontend && npm run test:backend",
+    "test:frontend": "cd frontend && npm test",
+    "test:backend": "cd backend && npm test"
+  },
+  "devDependencies": {
+    "concurrently": "^8.0.0"
   }
 }
