--- a/backend/package.json
+++ b/backend/package.json
@@ -1,29 +1,24 @@
 {
   "name": "filmila-backend",
   "version": "1.0.0",
-  "description": "Backend API for Filmila video streaming platform",
+  "description": "",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "build": "echo \"No build required\"",
-    "migrate": "node src/db/migrate.js",
     "dev": "nodemon src/app.js",
-    "test": "jest"
+    "build": "echo 'No build step needed'",
+    "migrate": "node src/db/migrate.js"
   },
   "dependencies": {
-    "aws-sdk": "^2.1048.0",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
-    "winston": "^3.3.3"
+    "express-rate-limit": "^6.7.0",
+    "jsonwebtoken": "^9.0.0",
+    "pg": "^8.11.0"
   },
   "devDependencies": {
-    "jest": "^27.4.7",
-    "nodemon": "^3.0.2",
-    "supertest": "^6.2.2"
+    "nodemon": "^2.0.22"
   }
 }
