--- a/render.yaml
+++ b/render.yaml
@@ -32,13 +32,11 @@ services:
       - key: FRONTEND_BUILD_PATH
         value: /opt/render/project/src/frontend/build
       - key: DATABASE_URL
-        fromDatabase:
-          name: filmila-db
-          property: connectionString
-      - key: JWT_SECRET
-        generateValue: true
+        sync: false
       - key: DATABASE_SSL
         value: true
+      - key: JWT_SECRET
+        sync: false
       - key: JWT_EXPIRY
         value: 24h
       - key: FRONTEND_URL
@@ -76,6 +74,8 @@ services:
         destination: /index.html
 
 databases:
-  - name: filmila-db
+  - name: filmila_db
+    databaseName: filmila_db
+    user: filmila_db_user
     plan: free
     ipAllowList: []
