--- a/render.yaml
+++ b/render.yaml
@@ -46,7 +46,7 @@ services:
     staticPublishPath: build
     envVars:
       - key: REACT_APP_API_URL
-        value: https://filmila-api.onrender.com/api
+        value: https://filmila.onrender.com/api
       - key: REACT_APP_CLOUDFRONT_DOMAIN
         value: d1k0enfou8eft6.cloudfront.net
     routes:
