--- a/render.yaml
+++ b/render.yaml
@@ -39,11 +39,12 @@ services:
   - type: web
     name: filmila
     env: static
-    rootDir: frontend
+    rootDirectory: .
     buildCommand: |
+      cd frontend
       npm ci --legacy-peer-deps
       DISABLE_ESLINT_PLUGIN=true CI=false npm run build
-    staticPublishPath: build
+    staticPublishPath: frontend/build
     envVars:
       - key: REACT_APP_API_URL
         value: https://filmila.onrender.com/api
