Add homepage and redirects for proper static file serving

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "filmila-frontend",
   "version": "1.0.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@stripe/stripe-js": "^2.2.0",
     "@testing-library/jest-dom": "^5.17.0",
