Add forgot password feature with email reset functionality
- Added forgot password and reset password API endpoints
- Created frontend components for password reset flow
- Added email service integration with nodemailer
- Added database fields for reset tokens
- Updated environment variables for email configuration
- Added forgot password link to login page

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,3 +20,9 @@ CLOUDFRONT_DOMAIN=your-cloudfront-domain.cloudfront.net
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
 RATE_LIMIT_MAX_REQUESTS=100
+
+# Email Configuration
+EMAIL_SERVICE=gmail
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your_app_specific_password  # Generate from Google Account settings
+FRONTEND_URL=http://localhost:3000
