--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,12 @@
     "aws-sdk": "^2.1450.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^9.0.0",
-    "pg": "^8.11.0"
+    "nodemailer": "^6.9.1",
+    "pg": "^8.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
