WIP: Admin Login Redirection Fix
Issue: Admin users are incorrectly redirected to viewer dashboard after login

Changes made:
- Added admin verification endpoint (/admin/verify)
- Enhanced admin middleware with better logging and error handling
- Improved auth middleware with detailed logging and user status check
- Updated AdminDashboard component with error handling and role verification

Current status:
- Issue persists despite improvements
- Added comprehensive logging for debugging
- Next steps: Monitor logs during login process to identify exact point of failure

Testing steps:
1. Clear browser localStorage
2. Log out if logged in
3. Log in with admin@filmila.com
4. Check browser console and server logs for debugging info

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,22 +2,23 @@
   "name": "filmila-frontend",
   "version": "1.0.0",
   "private": true,
-  "homepage": "/",
+  "homepage": "https://filmila.onrender.com",
   "dependencies": {
-    "@stripe/stripe-js": "^2.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.2",
+    "axios": "^1.6.7",
+    "chart.js": "^4.4.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "set \"DISABLE_ESLINT_PLUGIN=true\" && set \"CI=false\" && react-scripts build",
+    "build": "DISABLE_ESLINT_PLUGIN=true CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
