--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,8 +21,9 @@ CLOUDFRONT_DOMAIN=your-cloudfront-domain.cloudfront.net
 RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
 RATE_LIMIT_MAX_REQUESTS=100
 
-# Email Configuration
-EMAIL_SERVICE=gmail
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASSWORD=your_app_specific_password  # Generate from Google Account settings
+# Email Configuration (SendGrid)
+SENDGRID_API_KEY=your_sendgrid_api_key
+SENDGRID_FROM_EMAIL=noreply@filmila.com
+
+# Frontend URL
 FRONTEND_URL=http://localhost:3000
