--- a/backend/package.json
+++ b/backend/package.json
@@ -7,19 +7,24 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "jest",
-    "build": "echo 'No build step needed'",
+    "build": "npm install && npm run migrate",
     "migrate": "node src/db/migrate.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "aws-sdk": "^2.1550.0",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.9",
+    "node-mailjet": "^6.0.8",
+    "nodemailer": "^6.10.0",
     "pg": "^8.11.3",
     "uuid": "^9.0.1"
   },
