--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,7 @@ services:
     name: filmila
     env: node
     nodeVersion: 18.x
-    buildCommand: |
-      npm install
-      cd frontend && npm install && npm run build
-      cd ../backend && npm install
+    buildCommand: npm run build
     startCommand: cd backend && npm start
     rootDirectory: .
     envVars:
@@ -22,7 +19,7 @@ services:
       - key: JWT_EXPIRY
         value: 24h
       - key: FRONTEND_URL
-        value: https://filmila.onrender.com
+        value: https://filmila.com
       - key: API_PREFIX
         value: /api
       - key: AWS_ACCESS_KEY_ID
@@ -35,6 +32,14 @@ services:
         value: filmila-videos
       - key: CLOUDFRONT_DOMAIN
         value: d1k0enfou8eft6.cloudfront.net
+      - key: MAILJET_API_KEY
+        value: edecb1ce00bbc7ee35d63ea705419872
+      - key: MAILJET_SECRET_KEY
+        value: 2a0857b0a46cc4bcd65ae49c26361f92
+      - key: MAILJET_FROM_EMAIL
+        value: megrenfilms@gmail.com
+      - key: MAILJET_FROM_NAME
+        value: Filmila
       - key: REACT_APP_API_URL
         value: https://filmila.onrender.com/api
       - key: REACT_APP_CLOUDFRONT_DOMAIN
